Functional index location finder and modification of the restaurant page and the controller for filtering.