@@ -4,6 +4,7 @@ import es.uclm.delivery.business.entity.Restaurant;
 import es.uclm.delivery.persistence.RestaurantDAO;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.GetMapping;
@@ -12,65 +13,78 @@ import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Controller
 public class RestaurantController {
 
     private static final Logger log = LoggerFactory.getLogger(RestaurantController.class);
-    private static final String CIF_RESTAURANT = "cifRestaurant";
 
-    private final RestaurantDAO restaurantDAO;
+    @Autowired
+    private RestaurantDAO restaurantDAO;
 
-    public RestaurantController(RestaurantDAO restaurantDAO) {
-        this.restaurantDAO = restaurantDAO;
+    @GetMapping("/restaurant")
+    public String RestaurantForm(Model model) {
+        model.addAttribute("restaurant", new Restaurant());
+        log.info("Mostrando formulario de registro de restaurantes.");
+        return "restaurant";
     }
 
-    @GetMapping("/cifRestaurant")
-    public String restaurantForm(Model model) {
-
-        model.addAttribute(CIF_RESTAURANT, new Restaurant());
-        if (log.isInfoEnabled()) {
-            log.info(restaurantDAO.findAll().toString());
-        }
-
-        return CIF_RESTAURANT;
-    }
-
-    @PostMapping("/cifRestaurant")
+    @PostMapping("/restaurant")
     public String restaurantSubmit(@ModelAttribute Restaurant restaurant, Model model) {
-        Restaurant existingRestaurant = restaurantDAO.findByCif(restaurant.getCif());
-
-        if (existingRestaurant != null) {
-            model.addAttribute(CIF_RESTAURANT, restaurant);
-            model.addAttribute("successMessage", "¡El CIF ya está registrado!");
-            log.warn("Intento de registro con un CIF duplicado:");
-            return CIF_RESTAURANT;
+        if (restaurantDAO.findByCif(restaurant.getCif()) != null) {
+            model.addAttribute("errorMessage", "El CIF ya está registrado.");
+            return "restaurant";
         }
 
         Restaurant savedRestaurant = restaurantDAO.save(restaurant);
-        model.addAttribute(CIF_RESTAURANT, savedRestaurant);
+        model.addAttribute("restaurant", savedRestaurant);
         model.addAttribute("successMessage", "¡Restaurante guardado con éxito!");
-        log.info("Restaurante guardado: {}", savedRestaurant);
 
-        return CIF_RESTAURANT;
+        log.info("Restaurante guardado: " + savedRestaurant);
+
+        return "restaurant";
     }
 
     @GetMapping("/restaurants")
-    public String showRestaurants(@RequestParam(value = "search", required = false) String search, Model model) {
+    public String showRestaurants(
+            @RequestParam(value = "search", required = false) String search,
+            @RequestParam(value = "locality", required = false) String locality,
+            Model model) {
+
         List<Restaurant> restaurants;
 
-        if (search != null && !search.isEmpty()) {
-            restaurants = restaurantDAO.findAll().stream()
-                    .filter(r -> r.getName().toLowerCase().contains(search.toLowerCase()))
-                    .toList();
-            model.addAttribute("searchKeyword", search);
+        // Si la localidad está presente, filtrar por localidad
+        if (locality != null && !locality.isEmpty()) {
+            if (search != null && !search.isEmpty()) {
+                // Si también hay un término de búsqueda por nombre, filtramos ambos
+                restaurants = restaurantDAO.findAll().stream()
+                        .filter(r -> r.getLocality().equalsIgnoreCase(locality) && r.getName().toLowerCase().contains(search.toLowerCase()))
+                        .collect(Collectors.toList());
+            } else {
+                // Si solo hay localidad, mostramos restaurantes de esa localidad
+                restaurants = restaurantDAO.findAll().stream()
+                        .filter(r -> r.getLocality().equalsIgnoreCase(locality))
+                        .collect(Collectors.toList());
+            }
+            model.addAttribute("searchKeyword", search); // Se mantiene el término de búsqueda por nombre
+            model.addAttribute("locality", locality); // Se mantiene la localidad seleccionada
         } else {
-            restaurants = restaurantDAO.findAll();
+            // Si no hay localidad, solo se filtra por nombre (si es que se busca algo)
+            if (search != null && !search.isEmpty()) {
+                restaurants = restaurantDAO.findAll().stream()
+                        .filter(r -> r.getName().toLowerCase().contains(search.toLowerCase()))
+                        .collect(Collectors.toList());
+                model.addAttribute("searchKeyword", search); // Se mantiene el término de búsqueda por nombre
+            } else {
+                // Mostrar todos los restaurantes si no hay parámetros de búsqueda
+                restaurants = restaurantDAO.findAll();
+            }
         }
 
         model.addAttribute("restaurants", restaurants);
-        log.info("Mostrando lista de restaurantes: {}", restaurants);
+        log.info("Mostrando lista de restaurantes: " + restaurants);
+
         return "restaurants";
     }
-
 }
